--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   <link rel="stylesheet" href="reset.css".css">
 </head>
 <body>
-  <h1>첫번째 프로젝트</h1>
-  <p>예ㅖㅖㅖㅖㅖ</p>
-  <h3>안녕하세요</h3>
-  <h4>첫 fftest입니다.</h4>
-  <h5>어떻게하는 거죠?</h5>
-  <h6>하하하</h6>
+  <h1>첫번째 프로젝트입니다.<h1>
 </body>
 </html>
