--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="reset.css".css">
 </head>
 <body>
-  <h1>첫번째 프로젝트입니다.<h1>
+  <h1 class="text">첫번째 프로젝트입니다.<h1>
 </body>
 </html>
